# insta-login-oauth

./: .env.example  .gitignore  app.py  pyproject.toml  supabase_schema.sql
docs/: APP_REVIEW_CHECKLIST.md  COMPLETE_APP_REVIEW_GUIDE.md  META_APP_REVIEW_NEXT_STEPS.md  META_APP_REVIEW_ONE_PAGE_CARD.md  PROJECT_GUIDE.md
jobs/: refresh_tokens.py
pages/: 1_📊_Dashboard.py  2_🔐_Login.py  3_⚙️_Settings.py  4_🔒_Privacy.py  5_🗑️_Data_Deletion.py  6_🔍_Live_Insights.py
src/: config.py  database.py  insights_collector.py  instagram_api.py  models.py  oauth.py  permission_badge.py  rate_limiter.py
tests/: test_refresh_tokens.py  test_review_readiness_regressions.py
